force-app/main/default/objects/Inbound_Email_Log__c/Inbound_Email_Log__c.object-meta.xml
<CustomObject>
    <description>Raw capture of every message that reaches the booking Email Service. Plumbing/debug log for the appointment booking POC; Booking_Reply__c holds the parsed, business-level record later.</description>
    <label>Inbound Email Log</label>
    <nameField>
        <displayFormat>IEL-{00000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inbound Email Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>