force-app/main/default/objects/Inbound_Email_Log__c/fields/Body_Html__c.field-meta.xml
<CustomField>
    <fullName>Body_Html__c</fullName>
    <label>Body HTML</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>