force-app/main/default/objects/Inbound_Email_Log__c/fields/Body_Plain__c.field-meta.xml
<CustomField>
    <fullName>Body_Plain__c</fullName>
    <label>Body Plain</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>