force-app/main/default/objects/Inbound_Email_Log__c/fields/Body_Truncated__c.field-meta.xml
<CustomField>
    <fullName>Body_Truncated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A body exceeded the Long Text limit and was cut. Gemini would be classifying an incomplete reply, so these must go to Rep Review rather than auto-book.</description>
    <label>Body Truncated</label>
    <type>Checkbox</type>
</CustomField>