force-app/main/default/objects/Inbound_Email_Log__c/fields/In_Reply_To__c.field-meta.xml
<CustomField>
    <fullName>In_Reply_To__c</fullName>
    <label>In Reply To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>