force-app/main/default/objects/Inbound_Email_Log__c/fields/Is_Auto_Reply__c.field-meta.xml
<CustomField>
    <fullName>Is_Auto_Reply__c</fullName>
    <label>Is Auto Reply</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>