force-app/main/default/objects/Inbound_Email_Log__c/fields/Processing_Error__c.field-meta.xml
<CustomField>
    <fullName>Processing_Error__c</fullName>
    <label>Processing Error</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>