force-app/main/default/objects/Inbound_Email_Log__c/fields/Processing_Status__c.field-meta.xml
<CustomField>
    <fullName>Processing_Status__c</fullName>
    <description>Where this message is in the reply pipeline. Received is the work queue the Gemini classification job drains; Failed rows are safe to retry.</description>
    <label>Processing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Received</fullName>
                <default>true</default>
                <label>Received</label>
            </value>
            <value>
                <fullName>Queued</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>Ignored</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>