force-app/main/default/objects/Inbound_Email_Log__c/fields/Reference_Code__c.field-meta.xml
<CustomField>
    <fullName>Reference_Code__c</fullName>
    <label>Reference Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>