force-app/main/default/objects/Inbound_Email_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Received_At__c</columns>
    <columns>From_Address__c</columns>
    <columns>Subject__c</columns>
    <columns>Reference_Code__c</columns>
    <columns>Is_Auto_Reply__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>